--- a/Week2/build.gradle
+++ b/Week2/build.gradle
@@ -27,7 +27,8 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	runtimeOnly 'com.h2database:h2'
+	implementation group: 'org.postgresql', name:'postgresql', version: '42.7.3'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 }
 
 tasks.named('test') {
