--- a/Week2/src/main/resources/application.yml
+++ b/Week2/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/test
+    url: jdbc:postgresql://localhost:5432/sopt
     username: test
     password: test1
   jpa:
